--- a/Fee project version 2/index.html
+++ b/Fee project version 2/index.html
@@ -114,7 +114,7 @@
 
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="img1.jpg" class="image img-1 show" alt="" />
+              <img src="#" class="image img-1 show" alt="" />
               <img src="#" class="image img-2" alt="" />
               <img src="#" class="image img-3" alt="" />
             </div>
