--- a/Fee project version 2/index.html
+++ b/Fee project version 2/index.html
@@ -15,7 +15,7 @@
             <form action="index.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
                 <img src="Logo.png" alt="logo" />
-                <h4>music</h4>
+                <h4>mplayer</h4>
               </div>
 
               <div class="heading">
@@ -58,8 +58,8 @@
 
             <form action="index.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="Logo.png" alt="logo" />
-                <h4>music</h4>
+                <img src="Logo.png" alt="mplayer" />
+                <h4>mplayer</h4>
               </div>
 
               <div class="heading">
@@ -114,17 +114,17 @@
 
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="#" class="image img-1 show" alt="" />
-              <img src="#" class="image img-2" alt="" />
-              <img src="#" class="image img-3" alt="" />
+              <img src="Logo.png" class="image img-1 show" alt="logo" />
+              <img src="FastbikesandtoomuchCoffee.jpg" class="image img-2" alt="image1" />
+              <img src="Ain.jpg" class="image img-3" alt="image2" />
             </div>
 
             <div class="text-slider">
               <div class="text-wrap">
                 <div class="text-group">
-                  <h2>Listen To Music</h2>
-                  <h2>A</h2>
-                  <h2>B</h2>
+                  <h2>Listen</h2>
+                  <h2>Vibe</h2>
+                  <h2>Enjoy</h2>
                 </div>
               </div>
 
@@ -138,6 +138,8 @@
         </div>
       </div>
     </main>
+
+    <!-- Javascript file -->
 
     <script src="app.js"></script>
   </body>
